remove local properties from source control

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 /dist
 android/capacitor-firebase-auth/build
 android/capacitor-firebase-auth/capacitor-firebase-auth.iml
+android/build
+android/capacitor-firebase-auth.iml
+android/local.properties
 ios/Plugin/Pods
 
 # dependencies
