remove local properties from source control

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /dist
 android/build
 android/capacitor-firebase-auth.iml
+android/local.properties
 ios/Plugin/Pods
 capacitor-firebase-auth-nightly.tgz
 
