add facebook permissions from config file to scope

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ android/capacitor-firebase-auth/capacitor-firebase-auth.iml
 android/build
 android/capacitor-firebase-auth.iml
 android/local.properties
+android/.gradle
 ios/Plugin/Pods
 
 # dependencies
