add facebook permissions from config file to scope

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 android/build
 android/capacitor-firebase-auth.iml
 android/local.properties
+android/.gradle
 ios/Plugin/Pods
 capacitor-firebase-auth-nightly.tgz
 
